# biktree

./: .gitignore  CMakeLists.txt  happyLittleTree.py
data2/: A  R  S  T  U  V  W
includes/: dfuds.hpp  qdags.hpp  rank.hpp  se_quadtree.hpp
queries/: j3.cpp  join_test.cpp
runqueries/: j3  j4  p2  p3  p4  s1  t4  ti2  ti3  ti4
runqueries/outputs/: p3.txt  p4.txt  s1.txt  s4.txt  t3.txt  t4.txt  ti2.txt  ti3.txt  tr2.txt
src/: KDTree.cpp  KDTree.h  joins.cpp  prevtest.cpp  test.cpp
